--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,12 @@ before_install:
 install:
   # Install the code requirements
   - make init
+  - pip install codecov
 
 script:
   # Runs unit tests
   - make pr
   - SAM_CLI_DEV=1 travis_wait pytest -vv tests/integration
+
+after_success:
+  - codecov
